# Claude.md

./: .gitignore  CLAUDE.md
DeepTutor/.venv-cli/: pyvenv.cfg
ObsidianVault/: .hermes_config.json  android_path.txt  sync-test-note.md  test.md
ObsidianVault/.stfolder/: syncthing-folder-cd7fe5.txt
ai-crypto-bot/: .context_dev_brand_cache.json  .gitignore  context_dev_client.py  pyproject.toml
ai-crypto-bot/config/: config.example.yaml
ai-crypto-bot/scripts/: backtest.py  backup-db.sh  check_market.py  health-monitor.sh  quick_test.py
ai-crypto-bot/src/: config.py  main.py  persistence.py
ai-crypto-bot/src/alerts/: __init__.py  base.py  discord.py  telegram.py
ai-crypto-bot/src/backtesting/: engine.py
ai-crypto-bot/src/exchange/: client.py
ai-crypto-bot/src/strategy/: aggressive_momentum.py  base.py  factory.py  macd.py  rsi.py  sma_cross.py
ai-crypto-bot/src/trading/: paper.py  paper.py.backup
ai-crypto-bot/src/web/: server.py
ai-crypto-bot/src/web/templates/: index.html
ai-crypto-bot/tests/: test_backtesting.py  test_factory.py  test_integration.py  test_paper.py  test_sma_cross.py
ai_stock_trader/: .context_dev_brand_cache.json  .env.example  .gitignore  Dockerfile  Dockerfile.web  README.md  ROADMAP.md  _patch_c.py  cleanup_trades.sh  config.json  context_dev_client.py  dashboard.py  debug.py  decision_log.txt  decision_logger.py  docker-compose.prod.yml  docker-compose.yml  live_bot.py  live_bot_multi.py  live_bot_multi_fixed.py  optimize.py  optimize_results.json  requirements.txt  run_bot.py  setup.sh  start.py  start.sh  test_strategy.py  trader.py  trading_config.py  unified_strategy.py  web_dashboard.py  web_dashboard.py.bak
ai_stock_trader/infra/: docker-compose.yml
ai_stock_trader/scripts/: backup-db.sh  health-monitor.sh  telegram-alert.sh
ai_stock_trader/static/: manifest.json  sw.js
ai_stock_trader/templates/: dashboard.html  mobile_dashboard.html  mobile_dashboard.html.bak  mobile_dashboard.html.bak-20260718-154205  mobile_dashboard.html.bak.pre-logo-1784394222
atomic/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  capacitor.config.ts  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  server.dockerfile  tsconfig.json  tsconfig.node.json  vitest.config.ts  web.dockerfile
atomic/.cargo/: config.toml
atomic/.github/workflows/: obsidian-plugin-release.yml  release.yml
atomic/bench/: README.md
atomic/bench/datasets/: longmemeval-mini.json
atomic/crates/atomic-bench/: Cargo.toml
atomic/crates/atomic-bench/src/: dataset.rs  lib.rs  main.rs  mock_ai.rs  report.rs  runner.rs
atomic/crates/atomic-bench/src/suites/: graph_canvas.rs  memory_longitudinal.rs  mod.rs  pipeline_smoke.rs  rag_chat.rs  retrieval_mini.rs  scaffold.rs  wiki_synthesis.rs
atomic/crates/atomic-cloud/: Cargo.toml
atomic/crates/atomic-core/: Cargo.toml
atomic/crates/atomic-core/src/: atom_edit.rs  atom_links.rs  canvas_level.rs  chat.rs  chunking.rs  compaction.rs  error.rs  export.rs  extraction.rs  lib.rs  manager.rs  models.rs  registry.rs  tokens.rs
atomic/crates/atomic-core/src/import/: mod.rs
atomic/crates/atomic-core/src/ingest/: extract.rs
atomic/crates/atomic-core/src/migrate/: tables.rs
atomic/crates/atomic-core/src/providers/: structured.rs
atomic/crates/atomic-core/src/providers/ollama/: embedding.rs  mod.rs
atomic/crates/atomic-core/src/providers/openrouter/: embedding.rs  llm.rs
atomic/crates/atomic-core/src/providers/testdata/: schemas.snap.json
atomic/crates/atomic-core/src/reports/: mod.rs  runner.rs  schedule.rs  scope.rs
atomic/crates/atomic-core/src/storage/postgres/: atoms.rs  chat.rs  mod.rs  reports.rs  search.rs  wiki.rs
atomic/crates/atomic-core/src/storage/postgres/migrations/: 001_initial.sql  002_add_db_id.sql  004_wiki_proposals.sql  009_atom_links.sql  010_pipeline_jobs.sql  011_edges_status.sql  012_autotag_description.sql  013_atom_tags_source.sql  014_atoms_kind.sql  015_task_runs.sql  016_reports.sql  017_task_runs_active_unique.sql  018_briefings_teardown.sql  019_atom_chunks_hnsw_index.sql  020_atom_positions_double.sql  023_wiki_links_nullable_target.sql
atomic/crates/atomic-core/src/storage/sqlite/: atoms.rs  mod.rs  reports.rs  search.rs  settings.rs  wiki.rs
atomic/crates/atomic-core/src/wiki/: centroid.rs  section_ops.rs
atomic/crates/atomic-core/tests/: integration_tests.rs  migrate_tests.rs  storage_tests.rs
atomic/crates/atomic-core/tests/support/: mod.rs
atomic/crates/atomic-test-support/: Cargo.toml
atomic/crates/mcp-bridge/: Cargo.toml
atomic/deploy/: .env.example  MONITORING.md  docker-compose.yml
atomic/deploy/alloy/: config.alloy
atomic/docker/: nginx-web.conf  nginx.conf
atomic/docs/: AGENTS.md  README.md
atomic/docs/plans/: atomic-cloud-scaling.md  atomic-cloud.md  atomic-server-e2e.md  automations-vision.md  foreign-keys.md  reports-phase-3-briefing-collapse.md  reports-phase-4-authoring-ux.md  reports.md  (+3 more)
atomic/extension/: README.md  manifest.json
atomic/public/: manifest.webmanifest
atomic/scripts/: README.md  build-mcp-bridge.js  build-release.js  build-server.js  check-mcp-inspector.js  dev-mobile-android.js  dev-server.js  download-longmemeval.js  drop-database.js  import-wikipedia.js  reset-chunks.js  stress-test-summaries.js  stress-test-wikipedia.js  test-editor-harness.mjs
atomic/src/: App.tsx  index.css
atomic/src-tauri/: Cargo.toml  tauri.conf.json
roblox-math-quest/: AGENTS.md  Main.tscn  Roadblock.tscn  debug.keystore  export_presets.cfg  export_presets.cfg.backup  godot_build.sh  index.html  project.godot  test_preset.cfg
roblox-math-quest/Autoload/: GameManager.gd
roblox-math-quest/MiniGames/: TapNumbers.tscn
roblox-math-quest/checkpoint/: CONVERSATION_MEMORY.md  STATE_SNAPSHOT.md  SaveManager.gd
roblox-math-quest/roblox-math-quest/: test_syntax.gd
roblox-math-quest/scripts/: Main.gd  Roadblock.gd
(+275 files in other folders)
