[project]
name = "ai-crypto-bot"
version = "0.1.0"
description = "AI-powered crypto trading bot (MVP)"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
alerts = ["httpx>=0.27"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
