[package]
name = "atomic-bench"
version = "0.1.0"
edition = "2021"
description = "Benchmark runner for Atomic knowledge and RAG workflows"
license = "MIT"

[[bin]]
name = "atomic-bench"
path = "src/main.rs"

[dependencies]
atomic-core = { path = "../atomic-core" }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wiremock = "0.6"
