[package]
name = "atomic-mcp-bridge"
version = "0.1.0"
edition = "2021"
description = "Stdio-to-HTTP bridge for Atomic MCP server"

[[bin]]
name = "atomic-mcp-bridge"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "io-util", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
